--- a/style.css
+++ b/style.css
@@ -91,6 +91,9 @@ p:nth-of-type(2) {
 
 }
 
+img:nth-of-type(2) {
+  display: none;
+}
 
 
 
@@ -130,7 +133,41 @@ p:nth-of-type(2) {
   transition: 0.4s ease-in-out;
 }
 
+.cart:focus {
+  outline: 2px solid greenyellow;
+  transition: 0.4s ease;
+}
+
 .cart > img {
   height: 17px;
   padding-right: 1.2rem;
+}
+
+@media screen and (min-width: 600px) {
+
+  .prod-card-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto 1fr;
+    width: auto;
+    min-width: 600px;
+    max-width: 1000px;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .flex-img {
+    display: none;
+  }
+
+  img:nth-of-type(2) {
+    display: initial;
+    width: 100%;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border-top-right-radius: 0px;
+    grid-row: 1 / 4;
+  }
+
+  
 }
