--- a/style.css
+++ b/style.css
@@ -74,11 +74,6 @@ img {
   border-bottom-right-radius: 12px;
 }
 
-.prod-card-container > img {
-  border-top-left-radius: 12px;
-  border-top-right-radius: 12px;
-}
-
 .product-card-info > h1 {
   margin-top: 1.4rem
 }
@@ -106,10 +101,16 @@ p:nth-of-type(2) {
 .price-container {
   display: flex;
   align-items: center;
+  margin-top: 2rem;
+  margin-bottom: 1.2rem;
 }
 
 .price {
+  font-family: 'Fraunces', sans-serif;
+  font-size: 3rem;
+  font-weight: 700;
   color: var(--primary-1);
+  margin-right: 1.4rem;
 }
 
 .sub-price {
@@ -154,7 +155,6 @@ p:nth-of-type(2) {
   .prod-card-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto 1fr;
     width: auto;
     min-width: 600px;
     max-width: 1000px;
@@ -168,7 +168,7 @@ p:nth-of-type(2) {
   }
 
   picture {
-    grid-row: 1 / 5
+    grid-row: 1 / 4;
   }
 
   
